--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     ]
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.10",
-    "@mikro-orm/core": "^4.5.10",
+    "@mikro-orm/cli": "^5.0.1",
+    "@mikro-orm/core": "^5.0.1",
+    "@mikro-orm/migrations": "^5.0.1",
     "@mikro-orm/nestjs": "^4.3.1",
-    "@mikro-orm/postgresql": "^4.5.10",
+    "@mikro-orm/postgresql": "^5.0.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
